fix broken clients, mixed auth
